# ATS

./: .gitignore  BUG_FIXES.md  CLAUDE.md  QUICK_TEST.md  agent.md  start.sh  需求文档.md
agent/: .gitignore  QUICKSTART.md  README.md  __init__.py  agent.py  config.py  config.yaml.example  logger.py  pyproject.toml  requirements.txt  run.py  system_monitor.py  task_executor.py  utils.py  websocket_client.py  workspace_manager.py
backend/: .gitignore  Makefile  QUICKSTART.md  QUICK_FIX_DATABASE.md  README.md  SETUP_DATABASE.md  __init__.py  alembic.ini  check-database.sh  config.py  database.py  docker-compose.yml  fix-mysql-permissions.sh  init-mysql.sql  main.py  pyproject.toml  run.sh  test_models.py  后端需求.md
backend/alembic/: env.py
backend/api/: deps.py
backend/api/v1/: __init__.py  auth.py  dashboard.py  environments.py  executions.py  projects.py  test_cases.py  test_plans.py  (+4 more)
backend/core/: celery_app.py  logger.py  permissions.py  security.py
backend/migrations/: README.md  add_duration_to_test_suite_logs.py  add_duration_to_test_suite_logs.sql  add_execution_status.py  add_execution_status_to_plan_case_relations.sql  add_filter_fields_table.py  add_filter_fields_table.sql  add_git_enabled_to_test_suites.py  add_git_enabled_to_test_suites.sql  add_is_automated_to_test_cases.py  add_last_duration_to_test_suites.py  add_last_duration_to_test_suites.sql  add_max_concurrent_tasks_to_environments.py  add_max_concurrent_tasks_to_environments.sql  add_node_fields_to_environments.py  add_node_fields_to_environments.sql  add_reconnect_delay_to_environments.py  add_reconnect_delay_to_environments.sql  add_sequence_number_to_test_suite_logs.py  add_sequence_number_to_test_suite_logs.sql  add_test_suite_logs_table.py  add_test_suite_logs_table.sql  add_token_to_environments.py  add_token_to_environments.sql  make_git_fields_optional_in_test_suites.py  make_git_fields_optional_in_test_suites.sql  remove_expected_result_from_test_cases.py  remove_expected_result_from_test_cases.sql  remove_last_duration_from_test_suites.py  remove_last_duration_from_test_suites.sql  remove_level_from_test_suite_logs.py  remove_level_from_test_suite_logs.sql
backend/models/: __init__.py  base.py  environment.py  filter_field.py  module.py  notification.py  project.py  role.py  task_queue.py  test_case.py  test_execution.py  test_plan.py  test_report.py  test_suite.py  user.py
backend/schemas/: __init__.py  auth.py  common.py  environment.py  filter_field.py  module.py  project.py  test_case.py  test_suite.py  user.py
backend/scripts/: __init__.py  create_admin.py  generate_test_cases.py
backend/services/: __init__.py  auth_service.py  environment_service.py  filter_field_service.py  module_service.py  task_queue_service.py  test_case_service.py  test_plan_service.py  test_suite_service.py  user_service.py
backend/tasks/: __init__.py  test_case_tasks.py
backend/utils/: datetime_utils.py  excel_handler.py  file_handler.py  serializer.py
xat/: .gitignore  README.md  conftest.py  main.py  pyproject.toml
xat/framework/: __init__.py  logger.py
xat/tests/: __init__.py  test_example.py
(+72 files in other folders)
